--- a/package.json
+++ b/package.json
@@ -1,32 +1,38 @@
 {
   "name": "webpack-inicial",
   "version": "1.0.0",
-  "description": "Este es un cascaron de un proyecto de webpack",
+  "description": "Este es un boilerplate de webpack para proyectos en javascript",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.prod.js",
     "build:dev": "webpack --config webpack.config.js",
-    "start": "webpack-dev-server --open --port=8080"
+    "start": "webpack-dev-server --open --port=8080",
+    "webpack2": "webpack --mode development",
+    "build2": "webpack --mode production",
+    "watch2": "webpack --watch --mode development",
+    "dev2": "webpack-dev-server --mode development --open"
   },
-  "author": "Fernando Herrera",
+  "author": "Jesus Escobar <jedaesla20@gmail.com>",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.8.3",
-    "@babel/preset-env": "^7.8.3",
-    "babel-loader": "^8.0.6",
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "babel-loader": "^8.1.0",
     "babel-minify-webpack-plugin": "^0.3.1",
     "babel-preset-minify": "^0.5.1",
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.4.2",
-    "file-loader": "^5.0.2",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.9.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "style-loader": "^1.1.2",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.1"
-  }
+    "css-loader": "^4.2.2",
+    "file-loader": "^6.1.0",
+    "html-loader": "^1.3.0",
+    "html-webpack-plugin": "^4.4.1",
+    "mini-css-extract-plugin": "^0.11.0",
+    "node-sass": "^4.14.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "sass-loader": "^10.0.2",
+    "style-loader": "^1.2.1",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
+  },
+  "dependencies": {}
 }
